--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-  <title>Javascript Racer</title>
+  <title>Algebra Game: version 1 </title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head> 
 
